<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/around_infowindow_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/around_infowindow_taptoadd"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/around_content" />

    <TextView
        android:id="@+id/around_infowindow_wikiurl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/around_infowindow_nowiki"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/around_infowindow_maintype" />

    <TextView
        android:id="@+id/around_infowindow_maintype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/around_mainwindow_notype"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/around_infowindow_title" />

    <TextView
        android:id="@+id/around_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/around_infowindow_nowiki"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/around_infowindow_wikiurl" />
</androidx.constraintlayout.widget.ConstraintLayout>